--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,23 @@ a {
 .paddings {
   padding: 1.5rem;
 }
-
+.button{
+  font-weight: 500;
+  padding: 0.6rem 1.4rem;
+  color: white;
+  background: var(--blue-gradient);
+  border: none;
+  border-radius: 4px;
+  transition: all 300ms ease-in;
+}
+.button:hover{
+  cursor: pointer;
+  transform: scale(1.1);
+}
+.button1:hover{
+  cursor: pointer;
+  transform: scale(1.1);
+}
 .innerWidth {
   width: 100%;
 }
